--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,8 @@ knitr::opts_chunk$set(
 The goal of schex is to provide easy plotting of hexagon cell representations
 of single cell data stored in `SingleCellExperiment` or `Seurat` objects.
 
+![](misc/schex_hex.png){width=25%}
+
 ## Installation
 
 You can install the development version of schex with:
