add example to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,4 +33,26 @@ You can install the development version of schex with:
 devtools::install_github("SaskiaFreytag/schex")
 ```
 
+## Why you need schex?
+
+Did you know that order in which points are plotted depends on their location
+in the data frame? 
+For example when plotting the expression of CD19, a B-cell maker, you may 
+get the following three plots depending on how you order your observations.
+
+![Observations in decreasing order with regrads to their CD19 expression](misc/example_schex_files/figure-html/ggplot-decreasing-1.png){width=49%}
+![Observations in increasing order with regrads to their CD19 expression](misc/example_schex_files/figure-html/ggplot-increasing-1.png){width=49%}
+![Observation in random order](misc/example_schex_files/figure-html/ggplot-random-1.png){width=49%}
+
+Using the first plot you would not decide to call the central cluster a B-cell 
+population. Using the second plot you would probably decide to call the same 
+cluster a B-cell population. Using the last plot you might be undecided.
+
+## The solution
+
+Instead of plotting points on top of each other, schex summarizes points into 
+hexagon cells. Hence avoiding confusion due to observation order.
+
+![schex plotting](misc/example_schex_files/figure-html/schex-1.png){width=49%}
+
 
