--- a/README.Rmd
+++ b/README.Rmd
@@ -33,6 +33,15 @@ You can install the development version of schex with:
 devtools::install_github("SaskiaFreytag/schex")
 ```
 
+Note that you may need to install several bioconductor packages if 
+you haven't done so manually.
+
+``` r
+# install.packages("BiocManager")
+BiocManager::install("SingleCellExperiment")
+BiocManager::install("scater")
+```
+
 ## Why you need schex?
 
 Did you know that order in which points are plotted depends on their location
