change travis and put hexsticker in right spot

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,11 +18,11 @@ knitr::opts_chunk$set(
   [![Travis build status](https://travis-ci.org/SaskiaFreytag/schex.svg?branch=master)](https://travis-ci.org/SaskiaFreytag/schex)
     [![Codecov test coverage](https://codecov.io/gh/SaskiaFreytag/schex/branch/master/graph/badge.svg)](https://codecov.io/gh/SaskiaFreytag/schex?branch=master)
 <!-- badges: end -->
+<img src='man/figures/logo.png' align="right" height="139" />
 
 The goal of schex is to provide easy plotting of hexagon cell representations
 of single cell data stored in `SingleCellExperiment` or `Seurat` objects.
 
-![](misc/schex_hex.png){width=25%}
 
 ## Installation
 
