moved misc folder out
Former-commit-id: 99d29ae6de0b0db04310a769d75c1456c5f7c1ea [formerly 8b34523178db2a867be579720df397505fba3195] [formerly 973705bca554563c3a4c101605d809ecb18abce8 [formerly fae317382beff71b3a97d57bdf1e66a4939a99f7]]
Former-commit-id: eeb6d052a584a7bba604de1ae817a6f252301ac2 [formerly 36e2aef80312e2242e09e2e09df720be72cf9bb7]
Former-commit-id: dfa1a84258f882ca0aee944e1d02f71b00226b4d

--- a/vignettes/Seurat_schex.Rmd
+++ b/vignettes/Seurat_schex.Rmd
@@ -48,7 +48,8 @@ library(SeuratData)
 In order to demonstrate the capabilities of the schex package, I will use the
 a dataset of Peripheral Blood Mononuclear Cells (PBMC) freely available from 
 10x Genomics. There are 2,700 single cells that were sequenced on the 
-Illumina NextSeq 500. This data is handly availabe in the `SeuratData` package.
+Illumina NextSeq 500. This data is handly availabe in the [`SeuratData` 
+package](https://github.com/satijalab/seurat-data).
 
 ```{r load, eval=TRUE}
 InstallData("pbmc3k")
