--- a/README.Rmd
+++ b/README.Rmd
@@ -49,9 +49,9 @@ in the data frame?
 For example when plotting the expression of CD19, a B-cell maker, you may 
 get the following three plots depending on how you order your observations.
 
-![Observations in decreasing order with regrads to their CD19 expression](misc/example_schex_files/figure-html/ggplot-decreasing-1.png){width=49%}
+![Observations in decreasing order with regrads to their CD19 expression](man/figures/figure-html/ggplot-decreasing-1.png){width=49%}
 ![Observations in increasing order with regrads to their CD19 expression](misc/example_schex_files/figure-html/ggplot-increasing-1.png){width=49%}
-![Observation in random order](misc/example_schex_files/figure-html/ggplot-random-1.png){width=49%}
+![Observation in random order](man/figures/figure-html/ggplot-random-1.png){width=49%}
 
 Using the first plot you would not decide to call the central cluster a B-cell 
 population. Using the second plot you would probably decide to call the same 
@@ -62,7 +62,7 @@ cluster a B-cell population. Using the last plot you might be undecided.
 Instead of plotting points on top of each other, schex summarizes points into 
 hexagon cells. Hence avoiding confusion due to observation order.
 
-![schex plotting](misc/example_schex_files/figure-html/schex-1.png){width=49%}
+![schex plotting](man/figures/figure-html/schex-1.png){width=49%}
 
 ## How schex works?
 
@@ -70,5 +70,5 @@ Points in the same neighbourhood are summarized using one of many different
 summary statistics. The animation below shows how this works when using
 the mean to summarize the expression of CD19.
 
-![animation](misc/myanimation.gif)
+![animation](man/figures/myanimation.gif)
 
