--- a/vignettes/Seurat_schex.Rmd
+++ b/vignettes/Seurat_schex.Rmd
@@ -32,14 +32,12 @@ this vignette I will be presenting the use of `schex` for `Seurat` objects.
 
 ## Load libraries
 
-Please install the package [SeuratData](https://github.com/satijalab/seurat-data)
-from github.
-
 ```{r load-libraries, message=FALSE, warning=FALSE}
 library(schex)
 library(dplyr)
+library(scater)
 library(Seurat)
-library(SeuratData)
+library(TENxPBMCData)
 ```
 
 ## Setup single cell data
@@ -47,12 +45,18 @@ library(SeuratData)
 In order to demonstrate the capabilities of the schex package, I will use the
 a dataset of Peripheral Blood Mononuclear Cells (PBMC) freely available from 
 10x Genomics. There are 2,700 single cells that were sequenced on the 
-Illumina NextSeq 500. This data is handly availabe in the [`SeuratData` 
-package](https://github.com/satijalab/seurat-data).
+Illumina NextSeq 500. This data is handly availabe in the [`TENxPBMCData` package](http://bioconductor.org/packages/release/data/experiment/html/TENxPBMCData.html). 
+Note that we will then have to convert the `SingleCellExperiment` object to a 
+`Seurat` object first.
 
 ```{r load, eval=TRUE}
-InstallData("pbmc3k")
-pbmc <- pbmc3k
+tenx_pbmc3k <- TENxPBMCData(dataset = "pbmc3k")
+
+rownames(tenx_pbmc3k) <- uniquifyFeatureNames(rowData(tenx_pbmc3k)$ENSEMBL_ID, 
+                              rowData(tenx_pbmc3k)$Symbol_TENx)
+tenx_pbmc3k$nFeature_RNA
+
+pbmc <- as.Seurat(tenx_pbmc3k, data = NULL)
 ```
 
 In the next few sections, I will perform some simple quality control steps
@@ -61,17 +65,6 @@ I will then calculate various dimension
 reductions and cluster the data also outlined in the vignette.
 
 ## Standard pre-processing workflow
-
-### Filtering
-
-Cells with high mitochondrial content as well as cells with too low
-or too high feature count are filtered.
-
-```{r filter, eval=TRUE}
-pbmc[["percent.mt"]] <- PercentageFeatureSet(pbmc, pattern = "^MT-")
-pbmc <- subset(pbmc, subset = nFeature_RNA > 200 & nFeature_RNA < 2500 &
-                 percent.mt < 5)
-```
 
 ### Normalization
 
@@ -120,15 +113,6 @@ Next a UMAP dimensionality reduction is also run.
 pbmc <- RunUMAP(pbmc, dims = 1:10, verbose=FALSE)
 ```
 
-### Clustering
-
-Finally the data is clustered.
-
-```{r message=FALSE, warning=FALSE}
-pbmc <- FindNeighbors(pbmc, dims = 1:10, verbose = FALSE)
-pbmc <- FindClusters(pbmc, resolution = 0.5, verbose = FALSE)
-```
-
 ## Plotting single cell data
 
 At this stage in the workflow we usually would like to plot aspects of our data
@@ -139,14 +123,14 @@ plotting this.
 #### Calculate hexagon cell representation
 
 First, I will calculate the hexagon cell representation for each cell for
-a specified dimension reduction representation. I decide to use `nbins=50` which
+a specified dimension reduction representation. I decide to use `nbins=40` which
 specifies that I divide my x range into 40 bins. Note that this might be a 
 parameter that you want to play around with depending on the number of cells/
 nuclei in your dataset. Generally, for more cells/nuclei, `nbins` should be 
 increased.
 
 ```{r calc-hexbin}
-pbmc <- make_hexbin(pbmc, nbins = 50, 
+pbmc <- make_hexbin(pbmc, nbins = 40, 
                            dimension_reduction = "UMAP")
 ```
 
@@ -163,26 +147,13 @@ plot_hexbin_density(pbmc)
 #### Plot meta data in hexagon cell representation
 
 Next I colour the hexagon cells by some meta information, such as the median 
-total count or cluster membership in each hexagon cell.
+total count in each hexagon cell.
 
 ```{r plot-meta-1, fig.height=7, fig.width=7}
 plot_hexbin_meta(pbmc, col="nCount_RNA", action="median")
 ```
 
-```{r plot-meta-2, fig.height=7, fig.width=7}
-plot_hexbin_meta(pbmc, col="RNA_snn_res.0.5", action="majority")
-```
 
-For convenience there is also a function that allows the calculation of label
-positions for factor variables. These can be overlayed with the package 
-`ggrepel`.
-
-```{r plot-meta-label, message=FALSE, fig.height=7, fig.width=7}
-label_df <- make_hexbin_label(pbmc, col="RNA_snn_res.0.5")
-pp <- plot_hexbin_meta(pbmc, col="RNA_snn_res.0.5", action="majority") 
-pp + ggrepel::geom_label_repel(data = label_df, aes(x=x, y=y, label = label), 
-                            colour="black",  label.size = NA, fill = NA)  
-```
 
 #### Plot gene expression in hexagon cell representation
 
