fix mistakes related to vignettes
Former-commit-id: 08bcb1ff8db668ad349d6a27797ffaef054ed805 [formerly 9063a8383a971bffbf802bd331dbcf2b72066ce6] [formerly a4234dd4422f699741a67b448f6bd60374636f5c [formerly eaeeadc136456b351394e72b96841be5a7e900f6]]
Former-commit-id: 174f3e29e68ea19a15ad67322b6bc3f8cec86929 [formerly 4f898cfb09839e9cade5a44ab0f3fddb6e1f28e3]
Former-commit-id: 29ada3111e177134b3563873ec422a88c4b53d5e

--- a/vignettes/Seurat_schex.Rmd
+++ b/vignettes/Seurat_schex.Rmd
@@ -100,9 +100,10 @@ pbmc <- ScaleData(pbmc, features = all.genes, verbose = FALSE)
 First a PCA is applied to the data. Using the PCA you will have to decide on the
 dimensionality of the data. Here the dimensionality was decided to be 10. 
 Please refer to the original Seurat vignette for methods on how this is 
-assessed.
+assessed. Since there is a random component in the UMAP, we will set a seed.
 
 ```{r pca, message=FALSE, warning=FALSE}
+set.seed(10)
 pbmc <- RunPCA(pbmc, features = VariableFeatures(object = pbmc), 
                verbose = FALSE)
 ```
